--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
    <head>
       <title>On Beginnings</title>
-           <link rel="stylesheet" href="https://use.typekit.net/usu3qhe.css">
-        <link rel="stylesheet" type="text/css" href="assets/main.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://use.typekit.net/usu3qhe.css">
+      <link rel="stylesheet" type="text/css" href="assets/main.css">
       <script src="assets/sketch.js"> </script>
    </head>
  
 
         <h1>"On Beginnings"</h1>
         <h2>Mary Ruefle</h2>
-  <body>
+  <body class="nocursor" data-new-gr-c-s-check-loaded="14.997.0" data-gr-ext-installed>
 
     <div id="cursor" style="left: 727px; top: 45px;"> <img src="assets/imgs/circle.png"> </div>
 
