--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>Mary Ruefle</h2>
   <body class="nocursor" data-new-gr-c-s-check-loaded="14.997.0" data-gr-ext-installed>
 
-    <div id="cursor" style="left: 727px; top: 45px;"> <img src="assets/imgs/circle.png"> </div>
+    <div id="cursor" style="left: 727px; top: 45px;"> <img src="assets/imgs/circle.png" class="cursor"> </div>
 
 <div class="container">
   <div class="box box1"><a href="https://rachelyjpark.github.io/OB-1/" style="text-decoration: none"><span id="text-1">In life</span></a></div>
