--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <h1>"On Beginnings"</h1>
         <h2>Mary Ruefle</h2>
-  <body class="nocursor" data-new-gr-c-s-check-loaded="14.997.0" data-gr-ext-installed>
+  <body class="nocursor" >
 
     <div id="cursor" style="left: 727px; top: 45px;"> <img src="assets/imgs/circle.png" class="cursor"> </div>
 
